# SmartBoy

./: CMakeLists.txt  README
PROC_AAWANT/: CMakeLists.txt
PROC_AAWANT/src/: AawantMain.c
PROC_KEYEVENT/: CMakeLists.txt
PROC_KEYEVENT/include/: keydef.h  user_interface_key.h
PROC_KEYEVENT/src/: Keyed.c  user_interface_key.c
PROC_LED/: CMakeLists.txt
PROC_LED/src/: Ledd.c
PROC_PERIPHERALS/: CMakeLists.txt  KeyReportThread.java
PROC_PERIPHERALS/include/: blns.h  key.h  keydef.h  ringbuffer.h
PROC_PERIPHERALS/src/: blns.c  key.c  perip.c  ringbuffer.c
PROC_TEST/: CMakeLists.txt
PROC_TEST/src/: test.c
PROC_UPGRADE/: CMakeLists.txt  readme
PROC_UPGRADE/include/: HttpClient.h  aawant.h  common.h  systool.h  upg_control.h  upg_control_cli.h  upg_download.h  upg_utility.h
PROC_UPGRADE/src/: AawantUpgrade.c  HttpClient.cpp  upg_control.c  upg_control_cli.c  upg_download.c  upg_utility.c
PROC_UPGRADE/test/: update_test.cpp
PROC_VOICE/: CMakeLists.txt  README.md  VoiceConnectIf.cpp  VoiceConnectIf.h  VoiceConnectService.c  asoundlib.h  main.c  md5.c  md5.h  pcm.c  recorder.c
PROC_VOICE/include/: AudioQueue.h  VoiceConnectIf.h  a_thread.h  tools.h
PROC_VOICE/src/: AudioQueue.c  README.md  VoiceConnectIf.c  VoiceConnectIf.cpp  a_thread.c  encoder.c  pcmPlayer.c  recorder.c  signalAnalyserTimeMatch2.c  signalGenerator.c  voiceRecog.c  voiceRecognizer.c
PROC_VOICE/test/: AudioQueue.c  AudioQueue.h  cae_thread.c  error.h  record.c  record.h
aawant/: CMakeLists.txt
aawant/src/: AIEUComm.c  AIUComm.c  AIcom_Log.c  AIcom_PV.c  AIcom_Tool.c  AIcom_profile.c  Makefile
arm-bin/: ProcAawant  mytest  upgrade_test  upgraded
config/: aawant.conf
include/: AIEUComm.h  AILogFile.h  AIUComm.h  AI_ErrorNo.h  AI_PKTHEAD.h  AIcom_Tool.h  AIprofile.h  AawantData.h  AawantData.hbak
lib/arm64/: libcjson.so.1  libcurl.so.4.4.0  libnghttp2.so.14.14.0
lib/x86/: libcjson.so.1
